Make minor change

--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -37,7 +37,7 @@ library(tidyverse)
 ```
 
 
-# Q4. What is the relationship between predictors and happiness score in a linear regression analysis?
+# Q4. What is the relationship between predictors and happiness score in linear regression analysis?
 
 
 
