adding reference for gpd and happiness score

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@article{clark2011will,
+  title={Will GDP growth increase happiness in developing countries?},
+  author={Clark, Andrew and Senik, Claudia},
+  year={2011},
+  publisher={IZA discussion paper}
+}
+
+
 @article{gromping2015variable,
   title={Variable importance in regression models},
   author={Gr{\"o}mping, Ulrike},
