--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -73,7 +73,8 @@ world_map <-ne_countries(returnclass = "sf")
 \text{Hapiness score} = & \text{ GDP per Capita } + \text{ Family } + \text{ Life expectancy }+ \text{ Freedom } +   \\ 
 &  \text{ Government Corruption } + \text{ Generosity } + \text{Dystopia Residual }
 \end{align*}
-  The **table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, all the $$R^2$$is close to 1 from 2015 to 2017 in the **Table \@ref(tab:Rsquared)** ,indicating that these factors are stanardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
+  The **table \@ref(tab:model2015)** is shown that there is strong evidence that the happiness score is and only is a simple average of these factors. In addition, all the R squared are close to 1 from 2015 to 2017 in the **Table \@ref(tab:Rsquared)** ,indicating that these factors are stanardized and no longer to use as building up a model. Besides, for 2018 and 2019 data, the organization provides another set of variables such as social support has been changed from family factor, which are also highly correlated with the happiness score, but we have no method to understand what those values represent since they have been transformed in an unknown manner.
+  
   Instead of using the factors in the given dataset, we join other datasets to analysis the happiness score, including GDP, CPI, population and area by different countries.There are another three datasets such as GDP, CPI and population data which are downloaded from The World Bank. And area of each country is computed using the simple feature polygons with the package `rnaturalearth` (@rnaturalearth). We select all the happiness scores between 2015-2019 to construct a new table for happiness score with new factors, therefore **Table \@ref(tab:table-FT)** and **Table \@ref(tab:table-LT)** can be displayed the first three data and the last three data about happiness scores in different years. In addition, we pick up thee variables such as gdp,cpi and population between 2015-2019 to put them into new happiness score dataset. After matching the area of each country and drop out the missing value, the new dataset with happiness score for analyzing the relative variable improtance is established in the **Table \@ref(tab:tableHS)**.
 ```{r lmmodel}
 model2015 <- lm(as.formula(paste('`', 
@@ -195,17 +196,21 @@ head(happy_score)%>%kable(caption = 'A clean dataset with Happiness Score')%>%
 
 ## Variable importance
 
-  For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` (@relaimpo) is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the $$R^2$$ with the consideration of the sequence of predictors appearing in the model. 
+  For comparing the relative importance with each predictors, the **lmg** approach with package `relaipmo` (@relaimpo) is used for evaluating the variable importance in modelling happiness score. By using **lmg** approach to  calculate the relative contribution of each predictor to the R squared with the consideration of the sequence of predictors appearing in the model. 
+  
   Firstly, we built up a **LM** model for the new happiness score dataset. By eliminating the heteroscedasticity in the residual and interpreting the percentage marginal effect of each variable, using logarithmic method for setting up a linear regression model is an appropriate way. Therefore, a **LM** model is shown :
 \begin{align*}
 \text{log(Happiness Score)} = & \text{ log(CPI)} +  \text{ log(GDP)}+\text{ log(Area)}+ \\
 & \text{ log(Population)} 
 \end{align*}
-  From**Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors ($$R^2$$) is around 72.88%. For the four predictors, GDP with the higest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for hanppiness score and it is more likely to affect the change of happiness scores when the GDP variable change(@gromping2015variable). On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variabble is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model(@daoud2017multicollinearity).
+
+  From**Figure \@ref(fig:variable-important)**,we can see that the total proportion of variance explained by the model with all four predictors is around 72.88%. For the four predictors, GDP with the higest value in four predictors contributed to around 65% for the happiness scores,indicating that GDP factor is the most important for hanppiness score and it is more likely to affect the change of happiness scores when the GDP variable change(@gromping2015variable). On the other hand,by using **variance inflation factor** (VIF) measure to evaluate the impact of the correlation among the explanatory variables. In the **Table \@ref(tab:mulitilinearity)**, the VIF value in each predictor is not too high but for the population variabble is the highest one around at 3, indicating that there is a slight correlation of population with other variables in the model(@daoud2017multicollinearity).
 
 ## Scatter matrix
-  To analyze the relatinship between different perdictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)**compares all the predictors in the model and represents the relationship between these variables. If there is a strong positive linear correlation between two factors, we can say that if one factor is important in evaluating a country’s overall happiness, it is likely that the other factor is important as well. Based on the plots, it seems that the importances of GDP and area are strongly correlated, as well as population and area. Therfore,GDP is the most important factors for evaluating the happiness scores as it has the higest positive correlation with happiness score,but also for the developed countries in most of western area with higest GDP, the happiness scores will be higher than the development countries with lower GDP.
+  To analyze the relatinship between different perdictors, we use scatter matrix which can be visualized easily how much one variable is affected by another or the relationship between them. The **Figure \@ref(fig:scattermatrix)** compares all the predictors in the model and represents the relationship between these variables. If there is a strong positive linear correlation between two factors, we can say that if one factor is important in evaluating a country’s overall happiness, it is likely that the other factor is important as well. Based on the plots, it seems that the importances of GDP and area are strongly correlated, as well as population and area. Therfore,GDP is the most important factors for evaluating the happiness scores as it has the higest positive correlation with happiness score,but also for the developed countries in most of western area with higest GDP, the happiness scores will be higher than the development countries with lower GDP.
+  
   In conclusion, GDP is the most influential factors for assessing the happiness scores but the area vriable represents a higher correlation with GDP. Thus, Even in very poor countries, GDP comparisons seem to influence the happiness score mostly; however, it may look more likely to happen in rich-country phenomenon((@clark2011will).
+  
 
 ```{r variable-important,fig.cap="Variable importance in happiness score"}
 
@@ -232,6 +237,7 @@ as.table(car::vif(model))%>%
 ggpairs(data=happy_score[,-c(2,3)],
          main="Happiness Score Scatter Matrix")
 ```
+
 # Q4. What is the relationship between predictors and happiness score in linear regression analysis?
 
 ```{r message=FALSE}
@@ -294,26 +300,26 @@ population = read_csv("Data/API_SP.POP.TOTL_DS2_en_csv_v2_1120881.csv", skip = 4
 ```
 ```{r}
 temp = h15 %>%
-  select(Country, `Happiness Score`) %>%
+  dplyr::select(Country, `Happiness Score`) %>%
   mutate(year = 2015)
 
 h16 %>%
-  select(Country, `Happiness Score`) %>%
+  dplyr::select(Country, `Happiness Score`) %>%
   mutate(year = 2016) %>%
   rbind(temp) -> temp
 
 h17 %>%
-  select(Country, `Happiness Score` = Happiness.Score) %>%
+  dplyr::select(Country, `Happiness Score` = Happiness.Score) %>%
   mutate(year = 2017) %>%
   rbind(temp) -> temp
 
 h18 %>%
-  select(Country = `Country or region`, `Happiness Score` = Score) %>%
+  dplyr::select(Country = `Country or region`, `Happiness Score` = Score) %>%
   mutate(year = 2018) %>%
   rbind(temp) -> temp
 
 h19 %>%
-  select(Country = `Country or region`, `Happiness Score` = Score) %>%
+  dplyr::select(Country = `Country or region`, `Happiness Score` = Score) %>%
   mutate(year = 2019) %>%
   rbind(temp) -> temp
 ```
@@ -324,19 +330,19 @@ hs = temp
 
 ```{r message=FALSE}
 population %>%
-  select(Country = `Country Name`, `2015`:`2019`) %>%
+  dplyr::select(Country = `Country Name`, `2015`:`2019`) %>%
   gather(key = 'year', value = 'population', `2015`:`2019`) %>%
   mutate(year = as.numeric(year)) %>%
   right_join(hs) -> hs
 
 gdp %>%
-  select(Country = `Country Name`, `2015`:`2019`) %>%
+  dplyr::select(Country = `Country Name`, `2015`:`2019`) %>%
   gather(key = 'year', value = 'gdp', `2015`:`2019`) %>%
   mutate(year = as.numeric(year)) %>%
   right_join(hs) -> hs
 
 cpi %>%
-  select(Country = `Country Name`, `2015`:`2019`) %>%
+  dplyr::select(Country = `Country Name`, `2015`:`2019`) %>%
   gather(key = 'year', value = 'cpi', `2015`:`2019`) %>%
   mutate(year = as.numeric(year)) %>%
   right_join(hs) -> hs
@@ -346,7 +352,7 @@ cpi %>%
 world_map$area = st_area(world_map) %>% as.numeric()
 
 as_tibble(world_map) %>%
-  select(area, name) %>%
+  dplyr::select(area, name) %>%
   right_join(hs, by = c('name' = 'Country')) -> hs
 
 ```
@@ -357,7 +363,7 @@ nona_hs = na.omit(hs)
 
 nona_hs = nona_hs %>%
   mutate(log_score = log(`Happiness Score`), log_gdp = log(gdp), log_area = log(area), log_population = log(population)) %>%
-  select(log_score:log_population, name, year, cpi)
+  dplyr::select(log_score:log_population, name, year, cpi)
 
 lm(log_score~cpi+log_gdp+log_population+log_area,data=nona_hs) %>%
   summary() -> lm_sum
