--- a/Happiness.Rmd
+++ b/Happiness.Rmd
@@ -40,7 +40,9 @@ library(tidyverse)
 library(readr)
 library(kableExtra)
 library(lubridate)
-library(graphics)
+library(cowplot)
+
+here <- here::here
 ```
 
 
@@ -120,7 +122,7 @@ comparison_2015 <- happiness_2015 %>%
   filter(`Happiness Score` > average_score) %>% 
   mutate(above_average = length(Country), below_average = total_countries - above_average)
 
-comparison_2015 %>% 
+pie_2015 <- comparison_2015 %>% 
   select(above_average, below_average) %>% 
   unique() %>% 
   pivot_longer(c("above_average", "below_average"), names_to = "average", values_to = "count") %>% 
@@ -131,7 +133,7 @@ comparison_2015 %>%
   coord_polar("y", start = 0, direction = -1) +
   theme_void() + 
   geom_text(position = position_stack(vjust = 0.5), aes(label = percentage_label)) + 
-  ggtitle("The percentage of above or below average score in 2015")
+  ggtitle("The comparison of average score in 2015")
 
 ```
 
@@ -158,7 +160,7 @@ comparison_2019 <- happiness_2019 %>%
   filter(Score > average_score) %>% 
   mutate(above_average = length(`Country or region`), below_average = total_countries - above_average)
 
-comparison_2019 %>% 
+pie_2019 <- comparison_2019 %>% 
   select(above_average, below_average) %>% 
   unique() %>% 
   pivot_longer(c("above_average", "below_average"), names_to = "average", values_to = "count") %>% 
@@ -169,7 +171,7 @@ comparison_2019 %>%
   coord_polar("y", start = 0, direction = -1) +
   theme_void() + 
   geom_text(aes(label = per_label), position = position_stack(vjust = 0.5)) + 
-  ggtitle("The percentage of above or below average score in 2019")
+  ggtitle("The comparison of average score in 2019")
 ```
 
 ```{r regions-comparison-2019, fig.cap="The number of above average happiness scores across regions in 2019", fig.height=4, fig.width=11}
@@ -189,3 +191,34 @@ comparison_2019 %>%
   ylab("count") + 
   scale_y_continuous(breaks = seq(0,20, by = 1))
 ```
+
+
+```{r combination-plots-2015-2019, fig.cap="The percentage of the number of countries above or below average happiness scores in 2015 and 2019"}
+plot_grid(pie_2015,pie_2019, ncol=2)
+```
+
+# Introduction
+
+@helliwell2019world has indicated that there is an inner connection between government and happiness, it means the jobs of government would influence the happiness of citizens, while the people feeling of happiness could guide them to decide which kind of government to support. In addition, @helliwell2019world has explained that the living quality of people could be measured by the happiness of each country. Therefore, this report has utilised the happiness score of each country to analyse the changing of well-being according to countries, regions, and the world. Meanwhile, the happiness scores have been allocated into the world map to explain the distribution. In addition, the report has also analysed the importance of each modelling variables, as well as the relationships between happiness scores and other factors. During the study, this report has found the trends and distribution of happiness scores. Meanwhile, this report has explored the ----------what do you find(Karen)------. ------what do you find(weihao's part)------. However, the number of countries observed was not consistent across the datasets, which might generate errors when calculating the average level and analyse the trends over the years. ------- other limitations--------.
+
+
+
+# The evolution of world happiness
+
+@helliwell2019world has indicated that the world has become a rapidly changing place, and such the fastest changing might influence many aspects of different countries on their people. Therefore, in order to explore how satisfied people are with their countries over years, this report has used the happiness score to consider it.
+
+## The trends in happiness 2015-2019
+
+In this part, the top ten countries in 2015 have been extracted to consider how their happiness changing during the five years. According to table \@ref(tab:top10-countries-2015), it has shown that Switzerland has occupied first place in 2015, which was around 7.59 points. While Iceland was around 0.02 standing in second place. In addition, Australia was the tenth country, which was around 7.28. Based on figure \@ref(fig:score_trends), which has shown that Finland was the country with a significant increase over five years. Finland has increased from just over 7.4 to around 7.77 and has become the happiest country in 2019. Meanwhile, Denmark, Norway, Netherlands, and New Zealand have also experienced an increase in both scores and places compared with 2015. Although the happiness score of Sweden has decreased in the same period, however, the rank of Sweden hse improved in 2019. The rest of the four countries have experienced a decrease in both ranks and scores over five years. The reasons for the changing in score and ranks might because of the social welfare, country economic environment, and government policies. Such aspects have all related to each nation a within country so that impacts the satisfaction level.
+ 
+## The dynamics of the world and regional happiness 2015-2019
+
+Besides, this report has also considered the changing of regional happiness. Firstly, this report has explored the percentage of the number of countries which happiness scores above or below the world average level in 2015 and 2019 to consider the overall condition. According to figure \@ref(fig:combination-plots-2015-2019), the percentage of the above-average level has accounted for 46.84% in 2015, which was 74 countries. While there were still 84 countries that did not reach the average level. In 2019, the percentage of the above-average level has increased to 49.36%, which was 77 countries. And the percentage of the below-average level has decreased to 50.64%. In general, more and more people have satisfied their countries. 
+To study the deeper level, figure \@ref(fig:regions-comparison-2015) has explained the number of countries that above-average level of each region in 2015. According to that figure, Western Europe, and the region of Latin America and the Caribbean have the highest number, which was 19 countries respectively. While the region of Sub-Saharan Africa has only one country that above the average level in 2015. Furthermore, based on figure \@ref(fig:regions-comparison-2019), western Europe has still stood at the dominant place, which was 19 countries. While Latin America and the Caribbean have lost a country, which totals 18 countries above average level in 2019. Central and Northern Europe have the same number as Latin America and the Caribbean in 2019. Meanwhile, Southern Asia has appeared in the figure in 2019, which was one country above the average level. In addition, North America, the region of Australia and New Zealand, and Sub-Saharan Africa have remained the same level compared with 2015. 
+In general, according to the figure of 2015 and 2019, the countries that happiness scores above average level have concentrated on the region of Europe, and Latin America and Caribbean. While the other regions have less number of countries compared with them.
+
+
+
+
+
+
